add some simple tests for binary parameters

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,5 @@
 # Recurse into subdirectory for tests of class SaveRestore.
 add_subdirectory (SaveRestore)
+
+# Recurse into subdirectory for tests with copy-file-stats binary.
+add_subdirectory (copy-file-stats)
