--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: cpp
 compiler:
   - clang
   - gcc
-branches:
-  only:
-    - master
+# branches:
+#  only:
+#    - master
 script:
   - mkdir ./build
   - cd ./build
