test suite: move string_to_mode test to own directory

--- a/tests/SaveRestore/CMakeLists.txt
+++ b/tests/SaveRestore/CMakeLists.txt
@@ -27,7 +27,7 @@ set(string_to_mode_sources
     ../../program/AuxiliaryFunctions.cpp
     ../../program/FileUtilities.cpp
     ../../program/SaveRestore.cpp
-    string_to_mode.cpp)
+    stringToMode/string_to_mode.cpp)
 
 add_definitions (-Wall -O2 -fexceptions -std=c++0x)
 
