--- a/tests/SaveRestore/stringToMode/string_to_mode.cbp
+++ b/tests/SaveRestore/stringToMode/string_to_mode.cbp
@@ -24,12 +24,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="../../program/AuxiliaryFunctions.cpp" />
-		<Unit filename="../../program/AuxiliaryFunctions.hpp" />
-		<Unit filename="../../program/FileUtilities.cpp" />
-		<Unit filename="../../program/FileUtilities.hpp" />
-		<Unit filename="../../program/SaveRestore.cpp" />
-		<Unit filename="../../program/SaveRestore.hpp" />
+		<Unit filename="../../../program/AuxiliaryFunctions.cpp" />
+		<Unit filename="../../../program/AuxiliaryFunctions.hpp" />
+		<Unit filename="../../../program/FileUtilities.cpp" />
+		<Unit filename="../../../program/FileUtilities.hpp" />
+		<Unit filename="../../../program/SaveRestore.cpp" />
+		<Unit filename="../../../program/SaveRestore.hpp" />
 		<Unit filename="string_to_mode.cpp" />
 		<Extensions>
 			<code_completion />
