test suite: scenario for executable with --restore parameter
Due to the limits of the container-based infrastructure
on Travis-CI this test will only check for mode changes.
It might be changed in the future to check proper re-
storation of owner and group, too.

--- a/tests/copy-file-stats/CMakeLists.txt
+++ b/tests/copy-file-stats/CMakeLists.txt
@@ -20,3 +20,7 @@ add_test(NAME executable_save
 # add 2nd test for --save parameter
 add_test(NAME executable_save_slash
          COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/save/save_with_slash.sh $<TARGET_FILE:copy-file-stats>)
+
+# add test for --restore parameter (chmod only so far)
+add_test(NAME executable_restore_chmod
+         COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/restore/restore_chmod.sh $<TARGET_FILE:copy-file-stats>)
