test suite: add slightly modified test with --restore parameter

--- a/tests/copy-file-stats/CMakeLists.txt
+++ b/tests/copy-file-stats/CMakeLists.txt
@@ -24,3 +24,7 @@ add_test(NAME executable_save_slash
 # add test for --restore parameter (chmod only so far)
 add_test(NAME executable_restore_chmod
          COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/restore/restore_chmod.sh $<TARGET_FILE:copy-file-stats>)
+
+# add 2nd test for --restore parameter (chmod only so far)
+add_test(NAME executable_restore_chmod_slash
+         COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/restore/restore_chmod_slash.sh $<TARGET_FILE:copy-file-stats>)
