--- a/tests/SaveRestore/restore/stat_file_test.cbp
+++ b/tests/SaveRestore/restore/stat_file_test.cbp
@@ -27,6 +27,8 @@
 		<Unit filename="../../../program/AuxiliaryFunctions.hpp" />
 		<Unit filename="../../../program/FileUtilities.cpp" />
 		<Unit filename="../../../program/FileUtilities.hpp" />
+		<Unit filename="../../../program/ModeUtility.cpp" />
+		<Unit filename="../../../program/ModeUtility.hpp" />
 		<Unit filename="../../../program/SaveRestore.cpp" />
 		<Unit filename="../../../program/SaveRestore.hpp" />
 		<Unit filename="stat_file_test.cpp" />
