--- a/tests/SaveRestore/stringToMode/string_to_mode.cbp
+++ b/tests/SaveRestore/stringToMode/string_to_mode.cbp
@@ -28,6 +28,8 @@
 		<Unit filename="../../../program/AuxiliaryFunctions.hpp" />
 		<Unit filename="../../../program/FileUtilities.cpp" />
 		<Unit filename="../../../program/FileUtilities.hpp" />
+		<Unit filename="../../../program/ModeUtility.cpp" />
+		<Unit filename="../../../program/ModeUtility.hpp" />
 		<Unit filename="../../../program/SaveRestore.cpp" />
 		<Unit filename="../../../program/SaveRestore.hpp" />
 		<Unit filename="string_to_mode.cpp" />
